# epc

./: .gitignore  .gitmodules  Foo.elm  README.md  epc.cabal  stack.yaml
elm_test/: Foo.elm  elm-package.json  package.json
elm_test/aaron/hardy/james/pairing/: Bar.elm
elm_test/aaron/hardy/pairing/: Foo.elm
elm_test/src/: Coverage.elm
elm_test/src/Coverage/: Parser.elm  Types.elm
elm_test/src/Native/: Coverage.js
hs_test/: Foo.hi  Foo.hs  Main  Main.hi  Main.hs  Main.tix
hs_test/.hpc/: Foo.mix  Main.mix
src/: Main.hs
src/Trace/Epc/: Instrument.hs  Mix.hs  Options.hs  Parse.hs  Tix.hs
