name:                epc
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/epc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable epc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hpc >= 0.6 && < 0.7
                     , time >= 1.5 && < 1.6
                     , pretty-show >= 1.6 && < 1.7
                     , text >= 1.2 && < 1.3
                     , filepath >= 1.4 && < 1.5
                     , mtl >= 2.2 && < 2.3
                     , directory >= 1.2 && < 1.3
                     , optparse-applicative >= 0.11 && < 0.12
                     , elm-format
  ghc-options:         -Wall
  other-modules:       Trace.Epc.Instrument
                       Trace.Epc.Mix
                       Trace.Epc.Options
                       Trace.Epc.Parse
                       Trace.Epc.Tix
